--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,21 @@
+h2{
+    background:#dedede; width:500px; padding:20px;margin-left:500px; border-radius:10px; text-align:center;
+}
+form{
+    background:#e8e6e6; width:500px; padding:20px; margin-left:500px;border-radius:10px;
+}
+input{
+float: right;
+}
+button{
+    height: 30px;
+    width: 70px;
+    color: white;
+    font-weight: bold;
+    background: #2d84b3;
+    border: solid black;
+    margin-left: 45%;
+}
 table.paleBlueRows {
     font-family: Verdana, Geneva, sans-serif;
     border: 1px solid #FFFFFF;
